Fix typo from crrev.com/16bcb851b93f23e1a18178db1d901798cc3e22ce [formerly 01876af8d286f290fc12baeae8e4ac08913b9b90]

BUG=679660

Review-Url: https://codereview.chromium.org/2624973002
Cr-Commit-Position: refs/heads/master@{#442802}

Former-commit-id: e233068cdf299e2b78357576c68caa21866d7844